<resources>
    <string name="app_name" translatable="false">Open Weather</string>

    <string name="degree_celsius">%1$d &#8451;</string>
    <string name="degree_celsius_long">Temperature %1$d &#8451;</string>
    <string name="pressure">Pressure %1$d mm</string>
    <string name="humidity">Humidity %1$d %%</string>
    <string name="wind">Wind %1$s m/s</string>
    <string name="temp_min_max">Min %1$d&#176;\nMax %2$d&#176;</string>
    <string name="loading">Loading…</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_retry">Retry</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="dialog_error_default_message_retry">Failed to get data. Try again?</string>

    <!--START Exception messages -->
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_data_not_found">Cannot retrieve data. Check your internet connection</string>
    <!--END Exception messages -->

    <!--START Default strings -->
    <string name="test_day_name" translatable="false">Fri</string>
    <string name="test_description" translatable="false">Few clouds</string>
    <string name="test_degree_celsius" translatable="false">36 &#8451;</string>
    <string name="test_degree_celsius_long" translatable="false">Temperature 7 &#8451;</string>
    <string name="test_pressure" translatable="false">Pressure 740 mm</string>
    <string name="test_humidity" translatable="false">Humidity 90</string>
    <string name="test_wind" translatable="false">Wind 3 m/s</string>
    <string name="test_temp_min_max" translatable="false">5&#176; \n 12&#176;</string>
    <string name="test_wind_speed" translatable="false">Wind speed 8 m/s</string>
    <string name="btn_facebook" translatable="false">Facebook</string>
    <string name="btn_google" translatable="false">Google</string>
    <!--END Default strings -->

    <string name="sign_in_activity_title">Sign in</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="title_activity_start">Weather</string>
    <string name="add_your_city">Add city</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cities_weather">Cities weather</string>
    <string name="city_weather">Weather in %s</string>
    <string name="application_group">Application</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>

    <string name="login_success">You are logged in as %s</string>
    <string name="login_error">Authorization error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="empty_state_city">There is no city to track the weather.\nAdd your city.</string>
    <string name="enter_your_city">Please enter your City</string>
    <string name="choose_your_city">Choose your city</string>
    <string name="long_city_title" translatable="false">Long City Title, AU</string>
    <string name="button_undo">Undo</string>
    <string name="weather_api">Weather API: http://openweathermap.org/</string>
    <string name="repository">Repository: https://github.com/demixdn/open-weather</string>
    <string name="developer_email">Email: demixdn@gmail.com</string>
    <string name="developer_name">Aleksandr Pluzhnik</string>
    <string name="developer_title">Developer</string>
    <string name="auth_progress">Auth in progress…</string>
    <string name="cities_progress">Get cities in progress…</string>
    <string name="log_out_button">Log out</string>
    <string name="title_activity_detail">Weather</string>
</resources>
