<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.demixdn.weather.ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/llSubItems"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/icon_02d"
                android:id="@+id/ivCurrentWeatherIcon"
                tools:ignore="ContentDescription"/>

            <TextView
                android:text="@string/test_degree_celsius"
                android:id="@+id/tvCurrentWeatherTemp"
                style="@style/CurrentSubText"
                android:textSize="34sp"/>

            <TextView
                android:text="@string/test_temp_min_max"
                android:id="@+id/tvCurrentWeatherTempMinMax"
                style="@style/CurrentSubText"/>

            <TextView
                android:text="@string/test_description"
                android:id="@+id/tvCurrentWeatherDescription"
                style="@style/CurrentSubText"/>

            <TextView
                android:text="@string/test_pressure"
                android:id="@+id/tvCurrentWeatherPressure"
                style="@style/CurrentPressHum"
                android:layout_marginTop="8dp"/>

            <TextView
                android:text="@string/test_humidity"
                android:id="@+id/tvCurrentWeatherHumidity"
                style="@style/CurrentPressHum"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="#1b1b1b"
            tools:ignore="ContentDescription"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llSubItems"
        android:layout_alignParentBottom="true">
        <include layout="@layout/weather_sub_item"
                 android:id="@+id/llCurrentSubItem1"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#2f2f2f"
            tools:ignore="ContentDescription"/>
        <include layout="@layout/weather_sub_item"
                 android:id="@+id/llCurrentSubItem2"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#2f2f2f"
            tools:ignore="ContentDescription"/>
        <include layout="@layout/weather_sub_item"
                 android:id="@+id/llCurrentSubItem3"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#2f2f2f"
            tools:ignore="ContentDescription"/>
        <include layout="@layout/weather_sub_item"
                 android:id="@+id/llCurrentSubItem4"/>
    </LinearLayout>
</RelativeLayout>
